<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joshu.xylaser.XYlaser">

    <LinearLayout
        android:id="@+id/screen"
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/top_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author" />

            <TextView
                android:id="@+id/text_currentStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/startup" />

            <TextView
                android:id="@+id/text_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/speed" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/middle_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/constraint_n"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/n_constraint" />

                <ImageButton
                    android:id="@+id/button_north"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    android:onClick="onClick"
                    app:srcCompat="@drawable/arrow_up_green" />

                <Button
                    android:id="@+id/constraint_e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/e_constraint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/button_west"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    android:onClick="onClick"
                    app:srcCompat="@drawable/arrow_left_green" />

                <ImageButton
                    android:id="@+id/button_stop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@android:drawable/arrow_up_float" />

                <ImageButton
                    android:id="@+id/button_east"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    android:onClick="onClick"
                    app:srcCompat="@drawable/arrow_right_green" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/constraint_w"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/w_constraint" />

                <ImageButton
                    android:id="@+id/button_south"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    android:onClick="onClick"
                    app:srcCompat="@drawable/arrow_down_green" />

                <Button
                    android:id="@+id/constraint_s"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/s_contstraint" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_cut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cut" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
